@@ -3,15 +3,21 @@ NAME
 
 SYNOPSIS
         # Terminal 1:
-        $ logstash --input STDIN --output STOMP --output_options '{"FIXME"}'
+        $ message-pass --input STDIN --output STOMP --output_options \
+            '{"destination":"/queue/foo","hostname":"localhost","port":"6163","username":"guest","password":"guest"}'
         {"data":{"some":"data"},"@metadata":"value"}
 
         # Terminal 2:
-        $ logstash --output STDOUT --input STOMP --input_options '{"FIXME"}'
+        $ message-pass --output STDOUT --input STOMP --input_options \
+            '{"destination":"/queue/foo","hostname":"localhost","port":"6163","username":"guest","password":"guest"}'
         {"data":{"some":"data"},"@metadata":"value"}
 
 DESCRIPTION
     A AnyEvent::STOMP transport for Message::Passing.
+
+    This transport is currently alpha quality. It is known working, however
+    it does not gracefully handle errors or disconnects from the stomp
+    server.
 
 SEE ALSO
     Message::Passing::Output::STOMP
